fix(docs-infra): improve `search-results` layout on smaller screens
Previously, the `search-results` layout was switch from horizontal to
vertical at 480px. Yes, since some search queries can yield more than 5
`.search-area`s, even 600px are too narrow to accomodate a horizontal
layout.

This commit changes the breakpoint at which the layout switches to
vertical from 480px to 600px.

--- a/aio/src/styles/2-modules/_search-results.scss
+++ b/aio/src/styles/2-modules/_search-results.scss
@@ -64,7 +64,7 @@ aio-search-results {
       }
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 600px) {
       display: block;
     }
   }
